{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 361,
  "lineage": "84a34199-d8e0-b3df-6567-5facd90975f0",
  "resources": [
    {
      "module": "module.gcp_wordpress_mysql",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "module.gcp_wordpress_mysql.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-08-23T06:09:49.108-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/quiet-vector-393409/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/quiet-vector-393409/global/networks/terraform-network",
            "priority": 1000,
            "project": "quiet-vector-393409",
            "self_link": "https://www.googleapis.com/compute/v1/projects/quiet-vector-393409/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "wordpress"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gcp_wordpress_mysql.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.gcp_wordpress_mysql",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "module.gcp_wordpress_mysql.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-08-23T06:09:49.285-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/quiet-vector-393409/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/quiet-vector-393409/global/networks/terraform-network",
            "priority": 1000,
            "project": "quiet-vector-393409",
            "self_link": "https://www.googleapis.com/compute/v1/projects/quiet-vector-393409/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gcp_wordpress_mysql.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.gcp_wordpress_mysql",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_wordpress_mysql",
      "provider": "module.gcp_wordpress_mysql.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3306"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-08-23T06:09:49.323-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/quiet-vector-393409/global/firewalls/allow-wordpress-mysql",
            "log_config": [],
            "name": "allow-wordpress-mysql",
            "network": "https://www.googleapis.com/compute/v1/projects/quiet-vector-393409/global/networks/terraform-network",
            "priority": 1000,
            "project": "quiet-vector-393409",
            "self_link": "https://www.googleapis.com/compute/v1/projects/quiet-vector-393409/global/firewalls/allow-wordpress-mysql",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "mysql",
              "wordpress"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gcp_wordpress_mysql.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.gcp_wordpress_mysql",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance1",
      "provider": "module.gcp_wordpress_mysql.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20230817",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/quiet-vector-393409/zones/us-east1-b/disks/wordpress"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/quiet-vector-393409/zones/us-east1-b/instances/wordpress",
            "instance_id": "5737672656670145474",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "ftlGR27WJfQ=",
            "name": "wordpress",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.73.52.105",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/quiet-vector-393409/global/networks/terraform-network",
                "network_ip": "10.0.1.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/quiet-vector-393409/regions/us-east1/subnetworks/tp1-network",
                "subnetwork_project": "quiet-vector-393409"
              }
            ],
            "project": "quiet-vector-393409",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/quiet-vector-393409/zones/us-east1-b/instances/wordpress",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "wordpress"
            ],
            "tags_fingerprint": "AG-OvsszYew=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "module.gcp_wordpress_mysql.google_compute_network.vpc_network",
            "module.gcp_wordpress_mysql.google_compute_subnetwork.tp1_network"
          ]
        }
      ]
    },
    {
      "module": "module.gcp_wordpress_mysql",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance2",
      "provider": "module.gcp_wordpress_mysql.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20230817",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/quiet-vector-393409/zones/us-east1-b/disks/mysql"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/quiet-vector-393409/zones/us-east1-b/instances/mysql",
            "instance_id": "4189210038768483266",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "ftlGR27WJfQ=",
            "name": "mysql",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.148.41.114",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/quiet-vector-393409/global/networks/terraform-network",
                "network_ip": "10.0.1.3",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/quiet-vector-393409/regions/us-east1/subnetworks/tp1-network",
                "subnetwork_project": "quiet-vector-393409"
              }
            ],
            "project": "quiet-vector-393409",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/quiet-vector-393409/zones/us-east1-b/instances/mysql",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "mysql"
            ],
            "tags_fingerprint": "jBHG6eL24Lk=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "module.gcp_wordpress_mysql.google_compute_network.vpc_network",
            "module.gcp_wordpress_mysql.google_compute_subnetwork.tp1_network"
          ]
        }
      ]
    },
    {
      "module": "module.gcp_wordpress_mysql",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "module.gcp_wordpress_mysql.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/quiet-vector-393409/global/networks/terraform-network",
            "mtu": 0,
            "name": "terraform-network",
            "project": "quiet-vector-393409",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/quiet-vector-393409/global/networks/terraform-network"
          }
        }
      ]
    },
    {
      "module": "module.gcp_wordpress_mysql",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "tp1_network",
      "provider": "module.gcp_wordpress_mysql.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-08-23T06:09:51.502-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/quiet-vector-393409/regions/us-east1/subnetworks/tp1-network",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "tp1-network",
            "network": "https://www.googleapis.com/compute/v1/projects/quiet-vector-393409/global/networks/terraform-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "quiet-vector-393409",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/quiet-vector-393409/regions/us-east1/subnetworks/tp1-network"
          },
          "dependencies": [
            "module.gcp_wordpress_mysql.google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}